Add MQTT bridge support for Room Server
- Implement MQTTBridge class for packet forwarding over MQTT/WiFi
- Add MQTT bridge support to simple_room_server firmware
- Add WiFi initialization for MQTT bridge in room server
- Add MQTT bridge support to simple_repeater firmware (optional)
- Improve SerialWifiInterface frame parsing with state machine
- Add Python scripts (read.py, send.py) for MQTT interaction
- Add Xiao S3 WIO room_server_mqtt variant configuration
- Support MQTT channel filtering via MQTT_FILTER_CHANNELS

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ cmake-*
 .cache
 .ccls
 compile_commands.json
+
+; Private configuration files with credentials
+**/platformio.private.ini
+variants/**/platformio.private.ini
