--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 extra_configs =
 	variants/*/platformio.ini
+	variants/*/platformio.private.ini
 
 [arduino_base]
 framework = arduino
