--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -112,6 +112,44 @@ lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   ${esp32_ota.lib_deps}
 
+[env:Xiao_S3_WIO_room_server_mqtt_base]
+extends = Xiao_S3_WIO
+build_src_filter = ${Xiao_S3_WIO.build_src_filter}
+  +<helpers/bridges/MQTTBridge.cpp>
+  +<../examples/simple_room_server>
+build_flags =
+  ${Xiao_S3_WIO.build_flags}
+  -D ADVERT_NAME='"XiaoS3 Room MQTT"'
+  -D ADVERT_LAT=0.0
+  -D ADVERT_LON=0.0
+  -D WITH_MQTT_BRIDGE=1
+  -D MQTT_TOPIC_PREFIX='"meshcore/"'
+; Private credentials should be defined in platformio.private.ini:
+;  -D WIFI_SSID='"your_wifi_ssid"'
+;  -D WIFI_PWD='"your_wifi_password"'
+;  -D MQTT_BROKER='"your_mqtt_broker_ip"'
+;  -D MQTT_PORT=1883
+;  -D ADMIN_PASSWORD='"your_admin_password"'
+;  -D ROOM_PASSWORD='"your_room_password"'
+;  -D MQTT_USER='"your_mqtt_username"'
+;  -D MQTT_PASS='"your_mqtt_password"'
+;  -D BRIDGE_DEBUG=1
+;  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+lib_deps =
+  ${Xiao_S3_WIO.lib_deps}
+  ${esp32_ota.lib_deps}
+  knolleary/PubSubClient @ ^2.8
+
+; Private configuration (extends the base variant above)
+; This section should be overridden in platformio.private.ini (not in git)
+; See platformio.private.ini.example for template
+[env:Xiao_S3_WIO_room_server_mqtt]
+extends = env:Xiao_S3_WIO_room_server_mqtt_base
+build_flags =
+  ${env:Xiao_S3_WIO_room_server_mqtt_base.build_flags}
+  ; Credentials should be defined in platformio.private.ini
+
 [env:Xiao_S3_WIO_terminal_chat]
 extends = Xiao_S3_WIO
 build_flags =
