Fix PlatformIO config syntax and add WiFi/BT CLI control
- Fix platformio.ini syntax: remove env: prefix from base sections
- Fix extends syntax for env: sections inheriting from other env: sections
- Add low-power repeater variant with WiFi/BT disabled by default
- Add WiFi/BT CLI control commands (set wifi on/off, set bt on/off)
- Add sdkconfig.defaults for low-power configuration
- Add custom_features.md documentation

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -52,6 +52,19 @@ lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   ${esp32_ota.lib_deps}
 
+[env:Xiao_S3_WIO_repeater_lowpower]
+extends = env:Xiao_S3_WIO_repeater
+; Note: WiFi and BT are compiled in but disabled by default
+; Use CLI commands 'set wifi on' and 'set bt on' to enable them
+; This allows enabling them at runtime without recompiling
+build_flags =
+  ${env:Xiao_S3_WIO_repeater.build_flags}
+  -D DISABLE_WIFI_OTA=1
+;  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+lib_deps =
+  ${env:Xiao_S3_WIO_repeater.lib_deps}
+
 ; [env:Xiao_S3_WIO_repeater_bridge_rs232]
 ; extends = Xiao_S3_WIO
 ; build_src_filter = ${Xiao_S3_WIO.build_src_filter}
@@ -112,7 +125,7 @@ lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   ${esp32_ota.lib_deps}
 
-[env:Xiao_S3_WIO_room_server_mqtt_base]
+[Xiao_S3_WIO_room_server_mqtt_base]
 extends = Xiao_S3_WIO
 build_src_filter = ${Xiao_S3_WIO.build_src_filter}
   +<helpers/bridges/MQTTBridge.cpp>
@@ -145,9 +158,9 @@ lib_deps =
 ; This section should be overridden in platformio.private.ini (not in git)
 ; See platformio.private.ini.example for template
 [env:Xiao_S3_WIO_room_server_mqtt]
-extends = env:Xiao_S3_WIO_room_server_mqtt_base
+extends = Xiao_S3_WIO_room_server_mqtt_base
 build_flags =
-  ${env:Xiao_S3_WIO_room_server_mqtt_base.build_flags}
+  ${Xiao_S3_WIO_room_server_mqtt_base.build_flags}
   ; Credentials should be defined in platformio.private.ini
 
 [env:Xiao_S3_WIO_terminal_chat]
