--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -65,6 +65,39 @@ build_flags =
 lib_deps =
   ${env:Xiao_S3_WIO_repeater.lib_deps}
 
+[env:Xiao_S3_WIO_repeater_super_lowpower]
+extends = env:Xiao_S3_WIO_repeater_lowpower
+; CPU Frequency set to 80MHz to save power (default is 240MHz)
+board_build.f_cpu = 80000000L
+; Upload settings for better reliability
+upload_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=hard_reset
+build_flags =
+  ${env:Xiao_S3_WIO_repeater_lowpower.build_flags}
+  ; Disable Status LED to save power
+  -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Disable sensors to save power (I2C communication consumes energy)
+  -D DISABLE_SENSORS=1
+
+[env:Xiao_S3_WIO_repeater_low_sleep]
+extends = env:Xiao_S3_WIO_repeater_lowpower
+; CPU Frequency: Full speed (240MHz) for faster packet processing after wakeup
+; Upload settings for better reliability
+upload_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=hard_reset
+build_flags =
+  ${env:Xiao_S3_WIO_repeater_lowpower.build_flags}
+  ; Disable Status LED to save power
+  -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Disable sensors to save power (I2C communication consumes energy)
+  -D DISABLE_SENSORS=1
+  ; Enable light sleep for low power (wakes on LoRa packet, radio stays active)
+  -D ENABLE_LIGHT_SLEEP=1
+
 ; [env:Xiao_S3_WIO_repeater_bridge_rs232]
 ; extends = Xiao_S3_WIO
 ; build_src_filter = ${Xiao_S3_WIO.build_src_filter}
