--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -28,6 +28,7 @@ build_flags = ${esp32_base.build_flags}
   -D WRAPPER_CLASS=CustomSX1262Wrapper
   -D LORA_TX_POWER=22
   -D SX126X_RX_BOOSTED_GAIN=1
+  -D PIN_VBAT_READ=1  ; A0 pin is GPIO 1 on ESP32-S3 XIAO
 build_src_filter = ${esp32_base.build_src_filter}
   +<../variants/xiao_s3_wio>
   +<helpers/sensors>
@@ -60,6 +61,12 @@ extends = env:Xiao_S3_WIO_repeater
 build_flags =
   ${env:Xiao_S3_WIO_repeater.build_flags}
   -D DISABLE_WIFI_OTA=1
+  ; Battery voltage measurement on A0 pin with 1/2 voltage divider
+  ; Requires external 200kΩ resistor divider circuit on A0 pin
+  ; See: https://wiki.seeedstudio.com/check_battery_voltage/
+  ; Note: Code uses A0 constant if available (as per Seeed Studio wiki), 
+  ;       otherwise falls back to PIN_VBAT_READ. A0 should be available in Arduino framework.
+  ;       PIN_VBAT_READ is kept as fallback for compatibility.
 ;  -D MESH_PACKET_LOGGING=1
 ;  -D MESH_DEBUG=1
 lib_deps =
@@ -80,6 +87,7 @@ build_flags =
   -D PIN_STATUS_LED=RADIOLIB_NC
   ; Disable sensors to save power (I2C communication consumes energy)
   -D DISABLE_SENSORS=1
+  ; Battery voltage measurement enabled (inherited from lowpower variant)
 
 [env:Xiao_S3_WIO_repeater_low_sleep]
 extends = env:Xiao_S3_WIO_repeater_lowpower
@@ -97,6 +105,8 @@ build_flags =
   -D DISABLE_SENSORS=1
   ; Enable light sleep for low power (wakes on LoRa packet, radio stays active)
   -D ENABLE_LIGHT_SLEEP=1
+  ; Battery voltage measurement enabled (inherited from lowpower variant)
+  ; Battery voltage is measured after wakeup from light sleep and sent as telemetry
 
 ; [env:Xiao_S3_WIO_repeater_bridge_rs232]
 ; extends = Xiao_S3_WIO
