--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -222,6 +222,8 @@ lib_deps =
 
 [env:Xiao_S3_WIO_companion_radio_usb]
 extends = Xiao_S3_WIO
+; Battery voltage measurement enabled via PIN_VBAT_READ=1 (inherited from Xiao_S3_WIO base config)
+; Battery voltage is included in telemetry responses when requested (on-demand, not automatic)
 build_flags =
   ${Xiao_S3_WIO.build_flags}
   -I examples/companion_radio/ui-new
@@ -244,6 +246,8 @@ lib_deps =
 
 [env:Xiao_S3_WIO_companion_radio_ble]
 extends = Xiao_S3_WIO
+; Battery voltage measurement enabled via PIN_VBAT_READ=1 (inherited from Xiao_S3_WIO base config)
+; Battery voltage is included in telemetry responses when requested (on-demand, not automatic)
 build_flags =
   ${Xiao_S3_WIO.build_flags}
   -I examples/companion_radio/ui-new
@@ -268,6 +272,8 @@ lib_deps =
 
 [env:Xiao_S3_WIO_companion_radio_serial]
 extends = Xiao_S3_WIO
+; Battery voltage measurement enabled via PIN_VBAT_READ=1 (inherited from Xiao_S3_WIO base config)
+; Battery voltage is included in telemetry responses when requested (on-demand, not automatic)
 build_flags =
   ${Xiao_S3_WIO.build_flags}
   -I examples/companion_radio/ui-new
