Add light sleep with periodic sensor reading for companion radio
- Implemented light sleep mode for companion radio with periodic sensor reading
- Added support for SHT40 (temperature, humidity) and BMP280 (pressure, altitude) sensors
- BMP280 auto-detection: automatically tries both I2C addresses (0x76 and 0x77)
- Sensor reading interval: 30 minutes for production, 1 minute for debug
- Added detailed sensor data logging to Serial in human-readable format
- Added support for Current (LPP type 117) and Power (LPP type 128) in telemetry logging
- Fixed BMP280 initialization to use correct I2C bus (TELEM_WIRE)
- WiFi and Bluetooth disabled for low power operation
- New build variant: Xiao_S3_WIO_companion_radio_low_sleep

Changes:
- examples/companion_radio/main.cpp: Added light sleep logic with sensor reading on timeout wakeup
- src/helpers/sensors/EnvironmentSensorManager.cpp: Fixed BMP280 I2C bus initialization, added auto-detection for both addresses, added debug logging
- variants/xiao_s3_wio/platformio.ini: Added companion_radio_low_sleep environment profile
- docs/custom_features.md: Added documentation for companion radio with light sleep and sensors

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -295,6 +295,49 @@ lib_deps =
   densaugeo/base64 @ ~1.4.0
   adafruit/Adafruit SSD1306 @ ^2.5.13
 
+[env:Xiao_S3_WIO_companion_radio_low_sleep]
+extends = Xiao_S3_WIO
+; Companion radio with light sleep for low power operation
+; WiFi and Bluetooth are disabled (no BLE_PIN_CODE, no WIFI_SSID)
+; Device wakes up on LoRa packet (DIO1 interrupt) or timeout for sensor reading
+; Light sleep allows radio to stay in RX mode and wake up faster
+; Sensor reading interval: 30 minutes (1800 seconds) for production, 1 minute (60 seconds) for debug
+; Upload settings for better reliability
+upload_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=hard_reset
+; Battery voltage measurement enabled via PIN_VBAT_READ=1 (inherited from Xiao_S3_WIO base config)
+; Battery voltage is included in telemetry responses when requested (on-demand, not automatic)
+build_flags =
+  ${Xiao_S3_WIO.build_flags}
+  -I examples/companion_radio/ui-new
+  -D MAX_CONTACTS=350
+  -D MAX_GROUP_CHANNELS=40
+  -D DISPLAY_CLASS=SSD1306Display
+  -D OFFLINE_QUEUE_SIZE=256
+  ; Disable Status LED to save power
+  -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Enable light sleep for low power (wakes on LoRa packet, radio stays active)
+  -D ENABLE_LIGHT_SLEEP=1
+  ; Disable WiFi and Bluetooth to save power (no BLE_PIN_CODE, no WIFI_SSID)
+  -D DISABLE_WIFI_OTA=1
+  ; Sensor reading interval: 30 minutes (1800 seconds) for production
+  ; Debug mode enabled: 1 minute interval for testing
+  -D DEBUG_SENSOR_READ=1
+;  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+build_src_filter = ${Xiao_S3_WIO.build_src_filter}
+  +<helpers/ui/SSD1306Display.cpp>
+  +<helpers/esp32/*.cpp>
+  +<helpers/ui/MomentaryButton.cpp>
+  +<../examples/companion_radio/*.cpp>
+  +<../examples/companion_radio/ui-new/*.cpp>
+lib_deps =
+  ${Xiao_S3_WIO.lib_deps}
+  densaugeo/base64 @ ~1.4.0
+  adafruit/Adafruit SSD1306 @ ^2.5.13
+
 [env:Xiao_S3_WIO_sensor]
 extends = Xiao_S3_WIO
 build_src_filter = ${Xiao_S3_WIO.build_src_filter}
