Optimize deep sleep power consumption and add sensor support for XIAO ESP32S3
- Add gpio_deep_sleep_hold_en() to maintain GPIO pin states during deep sleep
- Set USB pins (GPIO 19, 20) to INPUT_PULLDOWN to prevent leakage current
- Simplify LoRa radio power-down sequence
- Add sensor reading support with deep sleep mode
- Add convert_channel_psk.py utility script
- Update documentation with realistic power consumption values:
  - ESP32-S3 module: ~8-20 µA in deep sleep
  - XIAO ESP32S3 dev board: ~2-8 mA (due to power LED, voltage regulator)
- Fix platformio.ini: configure deep sleep and sensor reading intervals

Note: Development board components (power LED, voltage regulator) cannot be
disabled via software, limiting achievable deep sleep current on dev boards.

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -295,13 +295,11 @@ lib_deps =
   densaugeo/base64 @ ~1.4.0
   adafruit/Adafruit SSD1306 @ ^2.5.13
 
-[env:Xiao_S3_WIO_companion_radio_low_sleep]
+[env:Xiao_S3_WIO_companion_radio_deep_sleep_base]
 extends = Xiao_S3_WIO
-; Companion radio with light sleep for low power operation
+; Companion radio base configuration for deep sleep operation
 ; WiFi and Bluetooth are disabled (no BLE_PIN_CODE, no WIFI_SSID)
 ; Device wakes up on LoRa packet (DIO1 interrupt) or timeout for sensor reading
-; Light sleep allows radio to stay in RX mode and wake up faster
-; Sensor reading interval: 30 minutes (1800 seconds) for production, 1 minute (60 seconds) for debug
 ; Upload settings for better reliability
 upload_speed = 115200
 upload_flags =
@@ -316,17 +314,15 @@ build_flags =
   -D MAX_GROUP_CHANNELS=40
   -D DISPLAY_CLASS=SSD1306Display
   -D OFFLINE_QUEUE_SIZE=256
-  ; Disable Status LED to save power
-  -D PIN_STATUS_LED=RADIOLIB_NC
-  ; Enable light sleep for low power (wakes on LoRa packet, radio stays active)
-  -D ENABLE_LIGHT_SLEEP=1
-  ; Disable WiFi and Bluetooth to save power (no BLE_PIN_CODE, no WIFI_SSID)
+  ; Disable WiFi and Bluetooth to save power (automatically disabled in debug mode)
   -D DISABLE_WIFI_OTA=1
-  ; Sensor reading interval: 30 minutes (1800 seconds) for production
-  ; Debug mode enabled: 1 minute interval for testing
-  -D DEBUG_SENSOR_READ=1
-;  -D MESH_PACKET_LOGGING=1
-;  -D MESH_DEBUG=1
+  ; Enable Bluetooth in debug mode (for USB-powered development)
+  ; In debug mode, device is usually USB-powered, so power consumption is less critical
+  -D BLE_PIN_CODE=123456
+  ; Disable Status LED to save power (only in production, not needed in debug)
+  -D PIN_STATUS_LED=RADIOLIB_NC
+  ; -D MESH_PACKET_LOGGING=1
+  ; -D MESH_DEBUG=1
 build_src_filter = ${Xiao_S3_WIO.build_src_filter}
   +<helpers/ui/SSD1306Display.cpp>
   +<helpers/esp32/*.cpp>
@@ -337,6 +333,23 @@ lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   densaugeo/base64 @ ~1.4.0
   adafruit/Adafruit SSD1306 @ ^2.5.13
+
+; Companion radio with deep sleep for ultra-low power operation (< 1mA vs ~80mA for light sleep)
+; Deep sleep causes reset on wakeup, so wakeup reason is handled in setup() and loop()
+; Device wakes up on LoRa packet (DIO1 interrupt) or timeout for sensor reading
+; Deep sleep has much lower power consumption than light sleep, ideal for battery-powered sensors
+; Sensor reading interval: 30 minutes (1800 seconds) for production, 1 minute (60 seconds) for debug
+; Debug mode: MESH_DEBUG=1 automatically disables deep sleep and enables more frequent sensor reads
+; To enable debug mode: uncomment -D MESH_DEBUG=1 below
+[env:Xiao_S3_WIO_companion_radio_deep_sleep]
+extends = env:Xiao_S3_WIO_companion_radio_deep_sleep_base
+build_flags =
+  ${env:Xiao_S3_WIO_companion_radio_deep_sleep_base.build_flags}
+  -D ENABLE_DEEP_SLEEP=1
+  ; Change sensor read interval to 30 minutes (1800 seconds) for deep sleep
+  -D SENSOR_READ_INTERVAL_SECS=1800
+  ; To enable sensor debug logging (custom feature):
+  ; -D SENSOR_DEBUG=1
 
 [env:Xiao_S3_WIO_sensor]
 extends = Xiao_S3_WIO
