Move deep sleep build flags to base configuration
- Move ENABLE_DEEP_SLEEP and SENSOR_READ_INTERVAL_SECS to companion_radio_deep_sleep_base
- This ensures deep sleep flags are always present in base configuration
- Remove duplicate flags from companion_radio_deep_sleep environment

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -321,6 +321,12 @@ build_flags =
   -D BLE_PIN_CODE=123456
   ; Disable Status LED to save power (only in production, not needed in debug)
   -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Deep sleep configuration
+  -D ENABLE_DEEP_SLEEP=1
+  ; Change sensor read interval to 30 minutes (1800 seconds) for deep sleep
+  -D SENSOR_READ_INTERVAL_SECS=1800
+  ; To enable sensor debug logging (custom feature):
+  ; -D SENSOR_DEBUG=1
   ; -D MESH_PACKET_LOGGING=1
   ; -D MESH_DEBUG=1
 build_src_filter = ${Xiao_S3_WIO.build_src_filter}
@@ -345,11 +351,6 @@ lib_deps =
 extends = env:Xiao_S3_WIO_companion_radio_deep_sleep_base
 build_flags =
   ${env:Xiao_S3_WIO_companion_radio_deep_sleep_base.build_flags}
-  -D ENABLE_DEEP_SLEEP=1
-  ; Change sensor read interval to 30 minutes (1800 seconds) for deep sleep
-  -D SENSOR_READ_INTERVAL_SECS=1800
-  ; To enable sensor debug logging (custom feature):
-  ; -D SENSOR_DEBUG=1
 
 [env:Xiao_S3_WIO_sensor]
 extends = Xiao_S3_WIO
