--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -168,7 +168,7 @@ lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   ${esp32_ota.lib_deps}
 
-[Xiao_S3_WIO_room_server_mqtt_base]
+[env:Xiao_S3_WIO_room_server_mqtt_base]
 extends = Xiao_S3_WIO
 build_src_filter = ${Xiao_S3_WIO.build_src_filter}
   +<helpers/bridges/MQTTBridge.cpp>
@@ -201,9 +201,9 @@ lib_deps =
 ; This section should be overridden in platformio.private.ini (not in git)
 ; See platformio.private.ini.example for template
 [env:Xiao_S3_WIO_room_server_mqtt]
-extends = Xiao_S3_WIO_room_server_mqtt_base
+extends = env:Xiao_S3_WIO_room_server_mqtt_base
 build_flags =
-  ${Xiao_S3_WIO_room_server_mqtt_base.build_flags}
+  ${env:Xiao_S3_WIO_room_server_mqtt_base.build_flags}
   ; Credentials should be defined in platformio.private.ini
 
 [env:Xiao_S3_WIO_terminal_chat]
