Secondary MQTT support

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -189,6 +189,11 @@ build_flags =
 ;  -D ROOM_PASSWORD='"your_room_password"'
 ;  -D MQTT_USER='"your_mqtt_username"'
 ;  -D MQTT_PASS='"your_mqtt_password"'
+; Optional: Second MQTT server (can also be configured via CLI):
+;  -D MQTT_BROKER2='"your_second_mqtt_broker_ip"'
+;  -D MQTT_PORT2=1883
+;  -D MQTT_USER2='"your_second_mqtt_username"'
+;  -D MQTT_PASS2='"your_second_mqtt_password"'
 ;  -D BRIDGE_DEBUG=1
 ;  -D MESH_PACKET_LOGGING=1
 ;  -D MESH_DEBUG=1
