--- a/variants/xiao_s3_wio/platformio.private.ini.example
+++ b/variants/xiao_s3_wio/platformio.private.ini.example
@@ -14,6 +14,11 @@ build_flags =
   -D ROOM_PASSWORD='"room456"'
 ;  -D MQTT_USER='"mqtt_user"'
 ;  -D MQTT_PASS='"mqtt_password"'
+; Optional: Second MQTT server (can also be configured via CLI):
+;  -D MQTT_BROKER2='"192.168.1.101"'
+;  -D MQTT_PORT2=1883
+;  -D MQTT_USER2='"mqtt_user2"'
+;  -D MQTT_PASS2='"mqtt_password2"'
 
 [env:Xiao_S3_WIO_companion_radio_deep_sleep]
 extends = env:Xiao_S3_WIO_companion_radio_deep_sleep_base
