--- a/variants/heltec_v4/platformio.ini
+++ b/variants/heltec_v4/platformio.ini
@@ -25,8 +25,8 @@ build_flags =
   -D PIN_USER_BTN=0
   -D PIN_VEXT_EN=36
   -D PIN_VEXT_EN_ACTIVE=HIGH
-  -D LORA_TX_POWER=10 ;If it is configured as 10 here, the final output will be 22 dbm.
-  -D MAX_LORA_TX_POWER=22 ; Max SX1262 output
+  -D LORA_TX_POWER=10 ;Heltec V4: 10 dBm = 22 dBm output (10 dBm into PA). For 27 dBm total, set internal amp to 22 (via CLI: set tx 27)
+  -D MAX_LORA_TX_POWER=27 ; Max total output with external PA (for CLI/companion radio)
   -D SX126X_DIO2_AS_RF_SWITCH=true
   -D SX126X_DIO3_TCXO_VOLTAGE=1.8
   -D SX126X_CURRENT_LIMIT=140
@@ -66,6 +66,46 @@ lib_deps =
   ${Heltec_lora32_v4.lib_deps}
   ${esp32_ota.lib_deps}
   bakercp/CRC32 @ ^2.0.0
+
+[env:heltec_v4_repeater_lowpower]
+extends = env:heltec_v4_repeater
+; Note: WiFi and BT are compiled in but disabled by default
+; Use CLI commands 'set wifi on' and 'set bt on' to enable them
+; This allows enabling them at runtime without recompiling
+build_flags =
+  ${env:heltec_v4_repeater.build_flags}
+  -D DISABLE_WIFI_OTA=1
+  ; Battery voltage measurement enabled
+  ; Battery voltage is measured using PIN_VBAT_READ (GPIO 1) with ADC control (GPIO 37)
+;  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+lib_deps =
+  ${env:heltec_v4_repeater.lib_deps}
+
+[env:heltec_v4_repeater_low_sleep]
+extends = env:heltec_v4_repeater_lowpower
+; CPU Frequency: Full speed (80MHz default for Heltec V4) for faster packet processing after wakeup
+; Upload settings for better reliability
+upload_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=hard_reset
+build_flags =
+  ${env:heltec_v4_repeater_lowpower.build_flags}
+  ; Disable Status LED to save power (if defined)
+  ; -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Disable sensors to save power (I2C communication consumes energy)
+  -D DISABLE_SENSORS=1
+  ; Enable light sleep for low power (wakes on LoRa packet, radio stays active)
+  -D ENABLE_LIGHT_SLEEP=1
+  ; Battery voltage measurement enabled (inherited from lowpower variant)
+  ; Battery voltage is measured after wakeup from light sleep and sent as telemetry
+  ; Optional: set timeout for light sleep (in seconds)
+  ; -D LIGHT_SLEEP_TIMEOUT=60
+;  -D MESH_PACKET_LOGGING=1
+;  -D MESH_DEBUG=1
+lib_deps =
+  ${env:heltec_v4_repeater_lowpower.lib_deps}
 
 [env:heltec_v4_repeater_bridge_espnow]
 extends = Heltec_lora32_v4
