--- a/variants/heltec_v4/platformio.ini
+++ b/variants/heltec_v4/platformio.ini
@@ -25,8 +25,8 @@ build_flags =
   -D PIN_USER_BTN=0
   -D PIN_VEXT_EN=36
   -D PIN_VEXT_EN_ACTIVE=HIGH
-  -D LORA_TX_POWER=10 ;Heltec V4: 10 dBm = 22 dBm output (10 dBm into PA). For 27 dBm total, set internal amp to 22 (via CLI: set tx 27)
-  -D MAX_LORA_TX_POWER=27 ; Max total output with external PA (for CLI/companion radio)
+  -D LORA_TX_POWER=10 ;If it is configured as 10 here, the final output will be 22 dbm.
+  -D MAX_LORA_TX_POWER=22 ; Max SX1262 output
   -D SX126X_DIO2_AS_RF_SWITCH=true
   -D SX126X_DIO3_TCXO_VOLTAGE=1.8
   -D SX126X_CURRENT_LIMIT=140
