Add Xiao_S3_WIO_sensor_deep_sleep profile with group channel messaging
- New profile Xiao_S3_WIO_sensor_deep_sleep_base and Xiao_S3_WIO_sensor_deep_sleep
- Added sendMessageToChannel function for sending messages to encrypted group channel
- Automatic message sending every 5 minutes on sensor read
- Deep sleep support for ultra-low power consumption (< 1mA)
- Sensor reading using sensors.querySensors() and board.getBattMilliVolts()
- Parsing telemetry data using LPPReader
- Messages sent via PAYLOAD_TYPE_GRP_TXT to encrypted group channel
- Error handling for sensor communication failures
- CLI commands for companion ID configuration (legacy, kept for backward compatibility)
- Persistent storage of companion ID to filesystem
- Reorganized documentation: split custom_features.md into separate feature files
- Updated documentation to reflect group channel messaging instead of room server messaging

--- a/variants/xiao_s3_wio/platformio.ini
+++ b/variants/xiao_s3_wio/platformio.ini
@@ -372,3 +372,55 @@ build_flags =
 lib_deps =
   ${Xiao_S3_WIO.lib_deps}
   ${esp32_ota.lib_deps}
+
+[env:Xiao_S3_WIO_sensor_deep_sleep_base]
+extends = Xiao_S3_WIO
+; Sensor base configuration for deep sleep operation
+; WiFi and Bluetooth are disabled to save power
+; Device wakes up on LoRa packet (DIO1 interrupt) or timeout for sensor reading
+; Upload settings for better reliability
+upload_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=hard_reset
+; Battery voltage measurement enabled via PIN_VBAT_READ=1 (inherited from Xiao_S3_WIO base config)
+build_flags =
+  ${Xiao_S3_WIO.build_flags}
+  -D ADVERT_NAME='"XiaoS3 sensor"'
+  -D ADVERT_LAT=0.0
+  -D ADVERT_LON=0.0
+  -D ADMIN_PASSWORD='"password"'
+  ; Disable WiFi and Bluetooth to save power
+  -D DISABLE_WIFI_OTA=1
+  ; Disable Status LED to save power
+  -D PIN_STATUS_LED=RADIOLIB_NC
+  ; Disable sensors to save power (I2C communication consumes energy)
+  -D DISABLE_SENSORS=1
+  ; Deep sleep configuration
+  -D ENABLE_DEEP_SLEEP=1
+  ; Change sensor read interval to 30 minutes (1800 seconds) for deep sleep
+  -D SENSOR_READ_INTERVAL_SECS=600
+  ; To enable debug logging:
+  ; -D SENSOR_DEBUG=1
+  ; -D MESH_PACKET_LOGGING=1
+  ; -D MESH_DEBUG=1
+build_src_filter = ${Xiao_S3_WIO.build_src_filter}
+  +<../examples/simple_sensor>
+lib_deps =
+  ${Xiao_S3_WIO.lib_deps}
+  ${esp32_ota.lib_deps}
+
+; Sensor with deep sleep for ultra-low power operation (< 1mA vs ~80mA for light sleep)
+; Deep sleep causes reset on wakeup, so wakeup reason is handled in setup() and loop()
+; Device wakes up on LoRa packet (DIO1 interrupt) or timeout for sensor reading
+; Deep sleep has much lower power consumption than light sleep, ideal for battery-powered sensors
+; Sensor reading interval: 30 minutes (1800 seconds) for production, 1 minute (60 seconds) for debug
+; Debug mode: MESH_DEBUG=1 automatically disables deep sleep and enables more frequent sensor reads
+; To enable debug mode: uncomment -D MESH_DEBUG=1 below
+[env:Xiao_S3_WIO_sensor_deep_sleep]
+extends = env:Xiao_S3_WIO_sensor_deep_sleep_base
+build_flags =
+  ${env:Xiao_S3_WIO_sensor_deep_sleep_base.build_flags}
+  ; Channel configuration (must be set in platformio.private.ini)
+  ; -D SENSOR_CHANNEL_NAME='"channel_name"'
+  ; -D SENSOR_CHANNEL_SECRET='"hex_secret_key"'
